--- a/.env
+++ b/.env
@@ -1,19 +1,26 @@
 APP_NAME=DynamicPricing
 APP_ENV=local
-APP_KEY=base64:xxxxxxxxx
+APP_KEY=base64:GENERATE_KEY
 APP_DEBUG=true
 APP_URL=http://localhost
 
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
+
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=dynamic_pricing_mysql
 DB_PORT=3306
 DB_DATABASE=pricing
 DB_USERNAME=pricing
-DB_PASSWORD=pricing
+DB_PASSWORD=secret
 
-REDIS_HOST=redis
-REDIS_PORT=6379
 
-QUEUE_CONNECTION=redis
+BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-SESSION_DRIVER=redis
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+REDIS_HOST=dynamic_pricing_redis
+REDIS_PASSWORD=null
+REDIS_PORT=6379
